# master-thesis-2025-gustav-eckerbom

./: README.md
Hardware/: Alife7-genx320-version-ctrl-rev2.PrjPcbStructure  Alife7-genx320-version-ctrl-rev3.PrjPcb  BoardConnectors.Harness  BoardConnectors.SchDoc  CPUPower.SchDoc  Job1.OutJob  MCUHighSpeed.SchDoc  MCUPinout.Harness  MCUPinout.SchDoc  PowerInput.Harness  PowerInput.SchDoc  TopLevel.SchDoc
camera_he_core_cpi_isr/: HE.cbuild-run.yml  alif.csolution.yml
camera_he_core_cpi_isr/.alif/: M55_HE_cfg.json  M55_HP_cfg.json
camera_he_core_cpi_isr/HP_app/: Core_select.h  main.c
camera_he_core_cpi_isr/alife7-genx320-rev1/: Core_select.h  alife7-genx320-rev1.cproject.yml  main.cpp
camera_he_core_cpi_isr/board/: board.h
camera_he_core_cpi_isr/pythonscripts/: stream_viewer.py  usb_dev.py  vendor_read.py
camera_he_core_gpio_isr/: alif.cbuild-pack.yml
camera_he_core_gpio_isr/.alif/: M55_HE_and_HP.json
camera_he_core_gpio_isr/HP_app/: HP_app.cproject.yaml  main.c
camera_he_core_gpio_isr/alife7-genx320-rev1/: main.cpp
camera_he_core_gpio_isr/board/: board.h
camera_he_core_gpio_isr/pythonscripts/: frame1.raw  frame2.raw  frame3.raw  frame4.raw  serialread.py  surface_reader_with_index.py
camera_multicore_demo/: HP.cbuild-run.yml  outputlog.txt  vcpkg-configuration.json
surface_reader_c/: CMakeLists.txt  old  old2
surface_reader_c/src/: main.c
thesisfigs/: CPItiming.ai  Eventcamera adapted.ai  PowerTree.ai  Research_Process.ai  Software Flowchart.ai  circbuffer.ai  embedded system.ai  event_vs_frame_camera_comparison.ai  hardwarearchitecture.ai
(+157 files in other folders)
